# credit-card-analysis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/aggregate/: aggregate_to.rs  category_aggregate.rs  mod.rs
crates/core/src/line_item/: filter.rs  mod.rs
crates/credit-card-app/: Cargo.toml
crates/credit-card-app/src/: lib.rs  main.rs  utils.rs
crates/credit-card-app/src/bill_models/: bill_line.rs  mod.rs  td_date.rs
crates/credit-card-app/src/db/: bill_line.rs  bill_line_description.rs  bill_line_description_methods.rs  bill_line_methods.rs  csv.rs  csv_methods.rs  description_category.rs  mod.rs
crates/db-entity/: Cargo.toml
crates/db-entity/src/: lib.rs
crates/db-entity/src/entity/: bill_line.rs  bill_line_description.rs  description_category.rs  (+3 more)
crates/migration/: Cargo.toml
crates/migration/src/: m20220101_000001_create_table.rs
crates/sq-core/: Cargo.toml
crates/sq-core/src/: lib.rs  report.rs
crates/squirrel/: Cargo.toml
crates/squirrel/src/: error.rs  lib.rs  main.rs
crates/squirrel/src/cli/: mod.rs  spending_summary.rs
crates/squirrel/src/db/: bill_line.rs  bill_line_description.rs  description_category.rs  mod.rs
crates/squirrel/src/models/: mod.rs
crates/squirrel/src/models/bill_models/: bill_line_string.rs  td_date.rs
crates/squirrel/src/models/squirrel/: entry_line.rs  mod.rs
crates/squirrel/src/squirrel/: mod.rs
crates/squirrel/src/ui_actions/: categorize_descriptions.rs  display_categories.rs  mod.rs  spending_summary.rs
(+3 files in other folders)
