[package]
name = "credit-card-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm ={ version = "0.9.2", features = ["sqlx-sqlite", "runtime-tokio-rustls", "debug-print", "mock"]}
chrono = { version = "0.4.22", features = ["serde"] }
# clap = "3.2.22"
