[package]
name = "squirrel"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db-entity = { path = "../db-entity"}
sea-orm ={ version = "0.9.2", features = ["sqlx-sqlite", "runtime-tokio-rustls", "debug-print", "mock"]}
chrono = { version = "0.4.22" }
tokio = { version = "1.21.1", features = ["rt", "macros"]}
futures = "0.3.24"
clap = { version = "4.0.18", features = [ "derive" ] }
